syntax = "proto3";

package ReportQueryManaging;

service ReportQueryService {
  rpc GetReport (GetReportRequest) returns (ReportResponse);
  rpc CreateGenerationRequest (ReportRequest) returns (ReportQueryResponse);
}

message GetReportRequest {
  string case_id = 1;
}

message ReportRequest {
  string date_start = 1;
  string date_end = 2;
  string product_id = 3;
  string case_id = 4;
}

message ReportResponse {
  oneof result {
    ReportData report = 1;
    string status = 2;
  }
}

message ReportQueryResponse{
  string case_id = 1;
  string status  = 2;
}

message ReportData {
  double conversion_ratio = 1;
  uint64 payments_count = 2;
}